# model-pruner

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
